text translted from english to serbian

--- a/about.html
+++ b/about.html
@@ -22,24 +22,24 @@
                         <img src="./images/logo.png" alt="West-o-plex logo">
                     </div>
                     <ul class="nav-bar">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/products.html">Products</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/">Početna</a></li>
+                        <li><a href="/about.html">O nama</a></li>
+                        <li><a href="/services.html">Usluge</a></li>
+                        <li><a href="/products.html">Proizvodi</a></li>
+                        <li><a href="/contact.html">Kontakt</a></li>
                     </ul>
-
+        
                     <!-- Side bar -->
                     <div class="bars">
                         <i class="fa fa-bars" id="open-btn"></i>
                     </div>
                     <ul class="side-bar">
                         <i class="fa fa-times" id="close-btn"></i>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/products.html">Products</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/">Početna</a></li>
+                        <li><a href="/about.html">O nama</a></li>
+                        <li><a href="/services.html">Usluge</a></li>
+                        <li><a href="/products.html">Proizvodi</a></li>
+                        <li><a href="/contact.html">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,20 +50,20 @@
             <div class="container">
                 <div class="header-section">
                     <div class="side left">
-                        <h1>About Us</h1>
+                        <h1>O Nama</h1>
                     </div>
                     <div class="side right">
                         <img src="./images/circle.svg" alt="" class="circle_image">
                         <img src="./images/header-man-img.png" alt="" class="man_image">
                         <div class="items">
-                            <div class="box box-1">Air Conditioning Service</div>
-                            <div class="box box-2">Furnace Service</div>
-                            <div class="box box-3">AC & Heating Service</div>
+                            <div class="box box-1">Servis Klima Uređaja</div>
+                            <div class="box box-2">Servis Grejnih Tela</div>
+                            <div class="box box-3">Usluge Grejanja i Hlađenja</div>
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
+        </header>        
     </section>
 
     <section class="about">
@@ -71,17 +71,17 @@
         <div class="container">
             <div class="about-section">
                 <div class="about-text">
-                    <p>Our Technicians Are Here To Help You.</p>
-                    <p>We offer speedy, reliable repair, installation and maintenance. As a family owned and operated company, we stand behind our work! Since 1987, Mark Roberts, owner of West-O-Plex A/C & Heating has helped DFW residences with their air conditioning and heating needs. Mark’s reputation of quality workmanship, integrity and friendly service speaks through the testimonials of his many satisfied clients.</p>
+                    <p>Naši tehničari su ovdje da vam pomognu.</p>
+                    <p>Nudimo brze, pouzdane popravke, instalacije i održavanje. Kao porodična kompanija, garantujemo kvalitet našeg rada! Od 1987. godine, Mark Roberts, vlasnik West-O-Plex A/C & Heating, pomaže stanovnicima DFW-a s potrebama vezanim za klima uređaje i grejanje. Markova reputacija za kvalitetan rad, integritet i ljubaznu uslugu ogleda se u svedočanstvima mnogih zadovoljnih klijenata.</p>
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <h2>Services</h2>
-                        <p>Let West-O-Plex A/C & Heating help you with your air conditioning and heating needs. Our reliable team is filled with trained professionals who are drug-tested and background checked. Whether you need service or new installation, we promise to always stay on the job until it’s done to your satisfaction. Call us at 817-244-2511 for prompt, reliable service anytime- day or night, weekends or holidays. Regardless of the HVAC system’s make or model, we can get your system running again in top form. Our technicians strive to minimize the impact on your home, ensuring the area is neat and tidy upon completion. Even after our work is complete, we’re always available to our customers to answer questions.</p>
+                        <h2>Usluge</h2>
+                        <p>Dozvolite da vam West-O-Plex A/C & Heating pomogne sa potrebama za grejanjem i hlađenjem. Naš pouzdan tim čine obučeni profesionalci koji su testirani na droge i provereni u pozadini. Bez obzira da li vam je potrebna usluga ili nova instalacija, obećavamo da ćemo ostati na poslu dok ne budete potpuno zadovoljni. Pozovite nas na 817-244-2511 za brzu, pouzdanu uslugu bilo kada - danju ili noću, vikendom ili praznicima. Bez obzira na marku ili model HVAC sistema, možemo osposobiti vaš sistem da ponovo radi u vrhunskoj formi. Naši tehničari se trude da smanje uticaj na vaš dom, osiguravajući da prostor ostane uredan i čist nakon završetka. Čak i nakon završetka našeg rada, uvek smo dostupni za odgovore na vaša pitanja.</p>
                     </div>
                     <div class="card">
-                        <h2>Products</h2>
-                        <p>There are many name brands on the market, each with their own unique qualities and limitations. Often, updated energy units are more energy efficient, and therefore save you money on your utility bills! West-O-Plex A/C & Heating will help you choose which is best and most reliable for your home/business and your budget. Financing is available with approved credit. Whether you are repairing, replacing, adding or maintaining your current system, West-O-Plex A/C & Heating Conditioning and Heating is not done until you are satisfied. We offer amazing A/C & Heating Services In Fort Worth, TX and surrounding areas and are here to help you with all of your HVAC needs.</p>
+                        <h2>Proizvodi</h2>
+                        <p>Postoje mnogi poznati brendovi na tržištu, svaki sa svojim jedinstvenim karakteristikama i ograničenjima. Često su noviji energetski sistemi efikasniji i mogu vam uštedeti novac na računima za komunalne usluge! West-O-Plex A/C & Heating će vam pomoći da izaberete ono što je najbolje i najpouzdanije za vaš dom/posao i vaš budžet. Dostupno je finansiranje uz odobrenje kredita. Bez obzira na to da li popravljate, zamenjujete, dodajete ili održavate svoj trenutni sistem, West-O-Plex A/C & Heating nije gotov dok ne budete zadovoljni. Nudimo fantastične usluge grejanja i hlađenja u Fort Worthu, TX i okolnim područjima i ovde smo da vam pomognemo sa svim vašim HVAC potrebama.</p>
                     </div>
                 </div>
             </div>
@@ -95,45 +95,44 @@
                 <div class="top-content">
                     <div class="col">
                         <img src="./images/logo.png" alt="Logo">
-                        <h1>AVAILABLE 24/7</h1>
+                        <h1>DOSTUPNO 24/7</h1>
                         <p>8125 White Settlement Rd Fort Worth, TX 76108
-                            TACLB License: TACLB39424E</p>
+                            TACLB Licenca: TACLB39424E</p>
                     </div>
                     <div class="col">
-                        <h4>Company</h4>
+                        <h4>Kompanija</h4>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Log In</a></li>
-                            <li><a href="#">Sign Up</a></li>
+                            <li><a href="#">O Nama</a></li>
+                            <li><a href="#">Prijava</a></li>
+                            <li><a href="#">Registracija</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Kontakt</a></li>
                         </ul>
                     </div>
                     <div class="col">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Usluge</h4>
                         <ul>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
+                            <li><a href="#">Popravka klima uređaja</a></li>
+                            <li><a href="#">Instalacija grejanja</a></li>
+                            <li><a href="#">Održavanje HVAC sistema</a></li>
+                            <li><a href="#">Besplatne konsultacije</a></li>
+                            <li><a href="#">Brza podrška</a></li>
                         </ul>
                     </div>
                     <div class="col">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Resursi</h4>
                         <ul>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
+                            <li><a href="#">Često postavljana pitanja</a></li>
+                            <li><a href="#">Vodiči i saveti</a></li>
+                            <li><a href="#">Servisna područja</a></li>
+                            <li><a href="#">Politika privatnosti</a></li>
+                            <li><a href="#">Uslovi korišćenja</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="bottom-content">
-                    <p>West-O-Plex Air Conditioning and Heating, is a family owned and operated company that has been
-                        around since 1987 and has built a company that is dedicated to making sure that your home is
-                        always as comfortable as you want it to be.</p>
+                    <p>West-O-Plex Klimatizacija i Grejanje je porodična firma koja postoji od 1987. godine i izgradila je
+                        kompaniju posvećenu tome da vaš dom uvek bude onoliko udoban koliko vi to želite.</p>
                 </div>
             </div>
         </div>
