--- a/products.html
+++ b/products.html
@@ -22,24 +22,24 @@
                         <img src="./images/logo.png" alt="West-o-plex logo">
                     </div>
                     <ul class="nav-bar">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/products.html">Products</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/">Početna</a></li>
+                        <li><a href="/about.html">O nama</a></li>
+                        <li><a href="/services.html">Usluge</a></li>
+                        <li><a href="/products.html">Proizvodi</a></li>
+                        <li><a href="/contact.html">Kontakt</a></li>
                     </ul>
-
+        
                     <!-- Side bar -->
                     <div class="bars">
                         <i class="fa fa-bars" id="open-btn"></i>
                     </div>
                     <ul class="side-bar">
                         <i class="fa fa-times" id="close-btn"></i>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/products.html">Products</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/">Početna</a></li>
+                        <li><a href="/about.html">O nama</a></li>
+                        <li><a href="/services.html">Usluge</a></li>
+                        <li><a href="/products.html">Proizvodi</a></li>
+                        <li><a href="/contact.html">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -50,15 +50,15 @@
             <div class="container">
                 <div class="header-section">
                     <div class="side left">
-                        <h1>Products</h1>
+                        <h1>Proizvodi</h1>
                     </div>
                     <div class="side right">
                         <img src="./images/circle.svg" alt="" class="circle_image">
                         <img src="./images/header-man-img.png" alt="" class="man_image">
                         <div class="items">
-                            <div class="box box-1">Air Conditioning Service</div>
-                            <div class="box box-2">Furnace Service</div>
-                            <div class="box box-3">AC & Heating Service</div>
+                            <div class="box box-1">Servis klima uređaja</div>
+                            <div class="box box-2">Servis peći</div>
+                            <div class="box box-3">Servis za grejanje i klimatizaciju</div>
                         </div>
                     </div>
                 </div>
@@ -71,104 +71,61 @@
         <div class="container">
             <div class="products-section">
                 <div class="products-text">
-                    <p>Call Us To Find The Right Brand For You.</p>
-                    <p>When you need a top quality product, West-O-Plex A/C & Heating will always have it ready for you. As a family owned and operated company, we specialize in commercial services so we will be able to help you find the right products that will work the best for you. There are so many different choices that you can pick from and we are ready to help you find exactly what you are looking for. Some people only want certain brands and others base their choice on the price or their energy efficiency. Our professionals will be able to go over all of your different options with you so that you have the best understanding and knowledge to make the right choice for your home. We are authorized dealers for a few brands like Lennox, Concord, Armstrong, and Trane. Although we are authorized dealers for those specific brands, we are able to service and repair any brand that you have. We will always be upfront and honest with you about every product we carry and will recommend what we think would work best in your home so that you not only get the best deal, but you will get the most longevity and energy efficiency out of the product as well. If you are looking for HVAC products in Fort Worth, TX and surrounding areas, make sure you call us at 817-244-2511 so that we can help you find your perfect match, today.</p>
+                    <p>Pozovite nas da pronađete pravi brend za sebe.</p>
+                    <p>
+                        Kada vam je potreban proizvod vrhunskog kvaliteta, West-O-Plex A/C & Heating će ga uvek imati
+                        spremnog za vas. Kao porodična firma, specijalizovani smo za komercijalne usluge, tako da ćemo
+                        vam pomoći da pronađete proizvode koji će najbolje odgovarati vašim potrebama. Postoji mnogo
+                        različitih izbora koje možete odabrati, i mi smo spremni da vam pomognemo da pronađete baš ono
+                        što tražite. Neki ljudi žele samo određene brendove, dok drugi biraju na osnovu cene ili energetske
+                        efikasnosti. Naši profesionalci će vam predstaviti sve dostupne opcije kako biste imali najbolje
+                        razumevanje i znanje da donesete pravu odluku za vaš dom. Ovlašćeni smo distributeri za nekoliko
+                        brendova poput Lennox, Concord, Armstrong i Trane. Iako smo ovlašćeni distributeri za te specifične
+                        brendove, možemo servisirati i popravljati bilo koji brend koji posedujete. Uvek ćemo biti iskreni
+                        prema vama u vezi sa svakim proizvodom koji nudimo i preporučićemo ono što mislimo da će najbolje
+                        raditi u vašem domu, kako biste dobili ne samo najbolju ponudu već i najveću dugovečnost i
+                        energetsku efikasnost proizvoda. Ako tražite HVAC proizvode u Fort Worthu, TX, i okolnim
+                        područjima, obavezno nas pozovite na 817-244-2511 kako bismo vam pomogli da pronađete savršen
+                        proizvod već danas.
+                    </p>
                 </div>
                 <div class="cards">
-                    <a href="" class="card small-card">
-                        Airtemp
-                    </a>
-                    <a href="" class="card small-card">
-                        Amana
-                    </a>
-                    <a href="" class="card small-card">
-                        American Standard
-                    </a>
-                    <a href="" class="card small-card">
-                        Armstrong
-                    </a>
-                    <a href="" class="card small-card">
-                        Bard
-                    </a>
-                    <a href="" class="card small-card">
-                        Bryant
-                    </a>
-                    <a href="" class="card small-card">
-                        Carrier
-                    </a>
-                    <a href="" class="card small-card">
-                        Century
-                    </a>
-                    <a href="" class="card small-card">
-                        Climatrol
-                    </a>
-                    <a href="" class="card small-card">
-                        Coleman
-                    </a>
-                    <a href="" class="card small-card">
-                        Comfort-aire
-                    </a>
-                    <a href="" class="card small-card">
-                        Day And Night
-                    </a>
-                    <a href="" class="card small-card">
-                        Goodman
-                    </a>
-                    <a href="" class="card small-card">
-                        Heatwave
-                    </a>
-                    <a href="" class="card small-card">
-                        Heil
-                    </a>
-                    <a href="" class="card small-card">
-                        Honeywell
-                    </a>
-                    <a href="" class="card small-card">
-                        Kenmore
-                    </a>
-                    <a href="" class="card small-card">
-                        Koldwave
-                    </a>
-                    <a href="" class="card small-card">
-                        Lennox
-                    </a>
-                    <a href="" class="card small-card">
-                        Luxaire
-                    </a>
-                    <a href="" class="card small-card">
-                        Nordyne
-                    </a>
-                    <a href="" class="card small-card">
-                        Payne
-                    </a>
-                    <a href="" class="card small-card">
-                        Rheem
-                    </a>
-                    <a href="" class="card small-card">
-                        Ruud
-                    </a>
-                    <a href="" class="card small-card">
-                        Sanyo
-                    </a>
-                    <a href="" class="card small-card">
-                        Sears
-                    </a>
-                    <a href="" class="card small-card">
-                        Trane
-                    </a>
-                    <a href="" class="card small-card">
-                        York
-                    </a>
-                    <a href="" class="card small-card">
-                        Sunbeam
-                    </a>
-                    <a href="" class="card small-card">
-                        Tempstar
-                    </a>
+                    <!-- Smaller cards with links -->
+                    <a href="#" class="card small-card">Airtemp</a>
+                    <a href="#" class="card small-card">Amana</a>
+                    <a href="#" class="card small-card">American Standard</a>
+                    <a href="#" class="card small-card">Armstrong</a>
+                    <a href="#" class="card small-card">Bard</a>
+                    <a href="#" class="card small-card">Bryant</a>
+                    <a href="#" class="card small-card">Carrier</a>
+                    <a href="#" class="card small-card">Century</a>
+                    <a href="#" class="card small-card">Climatrol</a>
+                    <a href="#" class="card small-card">Coleman</a>
+                    <a href="#" class="card small-card">Comfort-aire</a>
+                    <a href="#" class="card small-card">Day And Night</a>
+                    <a href="#" class="card small-card">Goodman</a>
+                    <a href="#" class="card small-card">Heatwave</a>
+                    <a href="#" class="card small-card">Heil</a>
+                    <a href="#" class="card small-card">Honeywell</a>
+                    <a href="#" class="card small-card">Kenmore</a>
+                    <a href="#" class="card small-card">Koldwave</a>
+                    <a href="#" class="card small-card">Lennox</a>
+                    <a href="#" class="card small-card">Luxaire</a>
+                    <a href="#" class="card small-card">Nordyne</a>
+                    <a href="#" class="card small-card">Payne</a>
+                    <a href="#" class="card small-card">Rheem</a>
+                    <a href="#" class="card small-card">Ruud</a>
+                    <a href="#" class="card small-card">Sanyo</a>
+                    <a href="#" class="card small-card">Sears</a>
+                    <a href="#" class="card small-card">Trane</a>
+                    <a href="#" class="card small-card">York</a>
+                    <a href="#" class="card small-card">Sunbeam</a>
+                    <a href="#" class="card small-card">Tempstar</a>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <!-- FOOTER SECTION -->
     <footer class="footer">
@@ -177,45 +134,44 @@
                 <div class="top-content">
                     <div class="col">
                         <img src="./images/logo.png" alt="Logo">
-                        <h1>AVAILABLE 24/7</h1>
+                        <h1>DOSTUPNO 24/7</h1>
                         <p>8125 White Settlement Rd Fort Worth, TX 76108
-                            TACLB License: TACLB39424E</p>
+                            TACLB Licenca: TACLB39424E</p>
                     </div>
                     <div class="col">
-                        <h4>Company</h4>
+                        <h4>Kompanija</h4>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Log In</a></li>
-                            <li><a href="#">Sign Up</a></li>
+                            <li><a href="#">O Nama</a></li>
+                            <li><a href="#">Prijava</a></li>
+                            <li><a href="#">Registracija</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Kontakt</a></li>
                         </ul>
                     </div>
                     <div class="col">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Usluge</h4>
                         <ul>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
+                            <li><a href="#">Popravka klima uređaja</a></li>
+                            <li><a href="#">Instalacija grejanja</a></li>
+                            <li><a href="#">Održavanje HVAC sistema</a></li>
+                            <li><a href="#">Besplatne konsultacije</a></li>
+                            <li><a href="#">Brza podrška</a></li>
                         </ul>
                     </div>
                     <div class="col">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Resursi</h4>
                         <ul>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
+                            <li><a href="#">Često postavljana pitanja</a></li>
+                            <li><a href="#">Vodiči i saveti</a></li>
+                            <li><a href="#">Servisna područja</a></li>
+                            <li><a href="#">Politika privatnosti</a></li>
+                            <li><a href="#">Uslovi korišćenja</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="bottom-content">
-                    <p>West-O-Plex Air Conditioning and Heating, is a family owned and operated company that has been
-                        around since 1987 and has built a company that is dedicated to making sure that your home is
-                        always as comfortable as you want it to be.</p>
+                    <p>West-O-Plex Klimatizacija i Grejanje je porodična firma koja postoji od 1987. godine i izgradila je
+                        kompaniju posvećenu tome da vaš dom uvek bude onoliko udoban koliko vi to želite.</p>
                 </div>
             </div>
         </div>
