--- a/services.html
+++ b/services.html
@@ -20,27 +20,27 @@
             <div class="container">
                 <div class="nav-section">
                     <div class="logo">
-                        <img src="./images/logo.png" alt="West-o-plex logo" />
+                        <img src="./images/logo.png" alt="West-o-plex logo">
                     </div>
                     <ul class="nav-bar">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/products.html">Products</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/">Početna</a></li>
+                        <li><a href="/about.html">O nama</a></li>
+                        <li><a href="/services.html">Usluge</a></li>
+                        <li><a href="/products.html">Proizvodi</a></li>
+                        <li><a href="/contact.html">Kontakt</a></li>
                     </ul>
-
+        
                     <!-- Side bar -->
                     <div class="bars">
                         <i class="fa fa-bars" id="open-btn"></i>
                     </div>
                     <ul class="side-bar">
                         <i class="fa fa-times" id="close-btn"></i>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/services.html">Services</a></li>
-                        <li><a href="/products.html">Products</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="/">Početna</a></li>
+                        <li><a href="/about.html">O nama</a></li>
+                        <li><a href="/services.html">Usluge</a></li>
+                        <li><a href="/products.html">Proizvodi</a></li>
+                        <li><a href="/contact.html">Kontakt</a></li>
                     </ul>
                 </div>
             </div>
@@ -51,15 +51,15 @@
             <div class="container">
                 <div class="header-section">
                     <div class="side left">
-                        <h1>Services</h1>
+                        <h1>Usluge</h1>
                     </div>
                     <div class="side right">
                         <img src="./images/circle.svg" alt="" class="circle_image" />
                         <img src="./images/header-man-img.png" alt="" class="man_image" />
                         <div class="items">
-                            <div class="box box-1">Air Conditioning Service</div>
-                            <div class="box box-2">Furnace Service</div>
-                            <div class="box box-3">AC & Heating Service</div>
+                            <div class="box box-1">Servis klima uređaja</div>
+                            <div class="box box-2">Servis peći</div>
+                            <div class="box box-3">Servis za grejanje i klimatizaciju</div>
                         </div>
                     </div>
                 </div>
@@ -72,82 +72,41 @@
         <div class="container">
             <div class="services-section">
                 <div class="service-text">
-                    <p>Let Us Help You Get Your Home Back To Comfort.</p>
+                    <p>Dozvolite nam da vam pomognemo da vratite udobnost u vaš dom.</p>
                     <p>
-                        When your HVAC system goes out and you have to find someone to fix
-                        it, we hope that you will think of West-O-Plex A/C & Heating. We
-                        are a family owned and operated company, so we strive to be a team
-                        that you can rely on for any of your HVAC needs. Our services
-                        range from air conditioner installation to indoor air quality
-                        testing. When it comes to the comfort that you have in your home,
-                        we do it all. We have a team of trained technicians that
-                        specialize in commercial services and that have been in this
-                        business for a long time so they have seen all of this before. We
-                        will be able to come out and look at what is going on and find the
-                        best solution to repair the problem. We know that cost is always
-                        on your mind and that is why we work hard to keep our prices
-                        affordable for you. When you need an A/C or HVAC service in Fort
-                        Worth, TX and surrounding areas, make sure you call our team right
-                        away at 817-244-2511. We will work fast to diagnose the problem
-                        and get your home back to the way it should be.
+                        Kada vaš HVAC sistem prestane da radi i morate pronaći nekoga da ga popravi, nadamo se da ćete se setiti kompanije West-O-Plex A/C & Heating. Kao porodična firma, trudimo se da budemo tim na koji možete da se oslonite za sve vaše potrebe vezane za grejanje i hlađenje. Naše usluge uključuju instalaciju klima uređaja i testiranje kvaliteta vazduha u zatvorenom prostoru. Što se tiče udobnosti vašeg doma, mi radimo sve. Imamo tim obučenih tehničara sa bogatim iskustvom u komercijalnim uslugama, koji će brzo pronaći najbolje rešenje za vaš problem. Znamo da su troškovi uvek važni, zbog čega se trudimo da naše cene budu pristupačne. Kada vam je potrebna A/C ili HVAC usluga u Fort Worthu, TX i okolini, pozovite nas odmah na 817-244-2511. Brzo ćemo dijagnostikovati problem i vratiti vaš dom u stanje kakvo treba da bude.
                     </p>
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <h2>Air Conditioning Service</h2>
+                        <h2>Servis Klima Uređaja</h2>
                         <p>
-                            Keeping your air conditioning working properly and running for a
-                            long time to come is something that we take very seriously. We
-                            don’t want you to be without your A/C because that means that
-                            the comfort in your home is nonexistent. When the summer months
-                            start to roll around and you haven’t touched your A/C in a few
-                            months after the cold season, you may want to consider having a
-                            tune-up. This will allow your system to get checked out, filters
-                            changed, and make sure everything is cleared out and running
-                            smoothly. All of your HVAC maintenance can be set up ahead of
-                            time if you want to get a maintenance package. That way you
-                            don’t have to worry about the cost when the time comes around
-                            because you will have already paid for it. We can send you
-                            reminders if you’d like as well.
+                            Održavanje ispravnog rada vaše klime je nešto što shvatamo veoma ozbiljno. Ne želimo da ostanete bez klime jer to znači da udobnost u vašem domu nestaje. Kada stignu letnji meseci, preporučujemo proveru vašeg sistema. Ova provera uključuje zamenu filtera i osigurava da sve funkcioniše kako treba. Takođe, možete unapred dogovoriti paket održavanja kako biste uštedeli vreme i novac. Za sve vaše potrebe održavanja HVAC sistema, obratite nam se i mi ćemo vam rado pomoći.
                         </p>
                     </div>
                     <div class="card">
-                        <h2>Our A/C Services</h2>
+                        <h2>Naše Usluge Klima Uređaja</h2>
                         <p>
-                            When there is a repair that needs to be done, we will show you
-                            everything that we found and explain to you why you need the
-                            repair and be able to provide you with options. We will always
-                            try to make the repair before just installing a new A/C because
-                            we know that that can be a big blow to the budget, especially
-                            when it is not expected. Repairs are typically simple and fast.
-                            We will almost always be able to do it the same day as long as
-                            we have the parts with us. This is one reason we have a fully
-                            stocked truck that we take with us so that we don’t have to wait
-                            to order a part and then come back and inconvenience you on
-                            another day. There will be times though, that you may have to
-                            have a new air conditioner installed. When your system starts
-                            having multiple repairs a year or is getting up there in age, it
-                            is more likely that you will need to get a new one. If you want
-                            to avoid having to get a new A/C for as long as possible, it is
-                            important that you change your filters and have it maintained
-                            when it is supposed to. For all of your air conditioning needs,
-                            call West-O-Plex A/C & Heating at 817-244-2511 and we will do
-                            whatever we can to help you.
+                            Kada je potrebna popravka, detaljno ćemo vam objasniti šta je otkriveno i pružiti opcije za popravak. Uvek ćemo pokušati popravku pre nego što preporučimo zamenu klime, jer znamo koliko je to važno za vaš budžet. U većini slučajeva, popravke se obavljaju brzo i istog dana, pod uslovom da imamo delove na raspolaganju. U retkim slučajevima, može biti potrebna zamena sistema, posebno ako je vaš uređaj star ili se često kvari. Da biste izbegli ove situacije, redovno menjajte filtere i održavajte sistem. Za sve vaše potrebe, pozovite nas na 817-244-2511.
                         </p>
                     </div>
                     <div class="card">
-                        <h2>Furnace Service</h2>
-                        <p>There is nothing more frustrating than being in a cold house and not having your furnace turn on. Don’t let this happen to you; call us right away if you suspect that it is not working so that we can come out and take a look. A furnace repair is usually as simple as changing out a new part or relighting it. Your heating pump system also needs to be squared away to keep everything running correctly. In every home, your furnace may vary. Some people have gas and others have electric. We work on all different types and brands so you can feel confident that we know what we are doing and the job will get done the right way.</p>
+                        <h2>Servis Peći</h2>
+                        <p>
+                            Nema ništa frustrirajuće od hladnog doma kada vaša peć ne radi. Nemojte dozvoliti da se ovo dogodi; pozovite nas čim posumnjate na problem kako bismo ga što pre rešili. Popravke peći obično uključuju zamenu delova ili ponovno paljenje. Radimo na svim vrstama i brendovima peći, tako da možete biti sigurni u kvalitet našeg rada.
+                        </p>
                     </div>
                     <div class="card">
-                        <h2>Our Heating Services</h2>
-                        <p>When we service your furnace, we make sure that we do an inspection and that it is working at 100% before we leave. One of the best things that we can do for your home is to do an indoor air quality test. If you have constant allergies or children with asthma, this is the best option that you can do to make sure that the air in your home is in the best shape possible so that you are able to feel confident that your home is filled with air that is good for you and isn’t making your life harder.</p>
-                        <p>We Can Check Your Thermostat To See If It Is Working.</p>
+                        <h2>Naše Usluge Grejanja</h2>
+                        <p>
+                            Kada servisiramo vašu peć, osiguravamo da radi 100% pre nego što napustimo vaš dom. Takođe nudimo test kvaliteta vazduha u zatvorenom prostoru, što je posebno korisno za porodice sa alergijama ili astmom. Osiguravamo da je vazduh u vašem domu zdrav i siguran za vas i vaše najmilije.
+                        </p>
+                        <p>Možemo proveriti i vaš termostat kako bismo osigurali da funkcioniše ispravno.</p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section>    
 
     <!-- FOOTER SECTION -->
     <footer class="footer">
@@ -155,51 +114,45 @@
             <div class="footer-section">
                 <div class="top-content">
                     <div class="col">
-                        <img src="./images/logo.png" alt="Logo" />
-                        <h1>AVAILABLE 24/7</h1>
-                        <p>
-                            8125 White Settlement Rd Fort Worth, TX 76108 TACLB License:
-                            TACLB39424E
-                        </p>
+                        <img src="./images/logo.png" alt="Logo">
+                        <h1>DOSTUPNO 24/7</h1>
+                        <p>8125 White Settlement Rd Fort Worth, TX 76108
+                            TACLB Licenca: TACLB39424E</p>
                     </div>
                     <div class="col">
-                        <h4>Company</h4>
+                        <h4>Kompanija</h4>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Log In</a></li>
-                            <li><a href="#">Sign Up</a></li>
+                            <li><a href="#">O Nama</a></li>
+                            <li><a href="#">Prijava</a></li>
+                            <li><a href="#">Registracija</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Kontakt</a></li>
                         </ul>
                     </div>
                     <div class="col">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Usluge</h4>
                         <ul>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
+                            <li><a href="#">Popravka klima uređaja</a></li>
+                            <li><a href="#">Instalacija grejanja</a></li>
+                            <li><a href="#">Održavanje HVAC sistema</a></li>
+                            <li><a href="#">Besplatne konsultacije</a></li>
+                            <li><a href="#">Brza podrška</a></li>
                         </ul>
                     </div>
                     <div class="col">
-                        <h4>Lorem Ipsum</h4>
+                        <h4>Resursi</h4>
                         <ul>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
-                            <li><a href="#">Lorem Ipsum</a></li>
+                            <li><a href="#">Često postavljana pitanja</a></li>
+                            <li><a href="#">Vodiči i saveti</a></li>
+                            <li><a href="#">Servisna područja</a></li>
+                            <li><a href="#">Politika privatnosti</a></li>
+                            <li><a href="#">Uslovi korišćenja</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="bottom-content">
-                    <p>
-                        West-O-Plex Air Conditioning and Heating, is a family owned and
-                        operated company that has been around since 1987 and has built a
-                        company that is dedicated to making sure that your home is always
-                        as comfortable as you want it to be.
-                    </p>
+                    <p>West-O-Plex Klimatizacija i Grejanje je porodična firma koja postoji od 1987. godine i izgradila je
+                        kompaniju posvećenu tome da vaš dom uvek bude onoliko udoban koliko vi to želite.</p>
                 </div>
             </div>
         </div>
